# bodysnatcher

./: .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
.github/workflows/: main.yaml
src/bodysnatcher/: __init__.py  _bodysnatcher.py
tests/: test_main.py
